Adicionado delete e finalizado swagger das rotas existentes
